k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-management

spec:
  replicas: 1

  selector:
    matchLabels:
      app: employee-management

  template:
    metadata:
      labels:
        app: employee-management

    spec:
      containers:
        - name: employee-management
          image: employee-management:latest

          ports:
            - containerPort: 8080
