k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-management-service

spec:
  type: NodePort

  selector:
    app: employee-management

  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
